--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,21 @@
     box-sizing:border-box;
     font-family: poppins, sans-serif;
     list-style: none;
+    color:rgb(75, 62, 62);
 } 
 body{
 
-    background-color:aquamarine
+    background-color:whitesmoke;
 }
 h1{
-font-size: 5rem;
-color:rgb(0, 174, 255);
+font-size: 7rem;
+
 text-align: center;
-margin-bottom: 30px;;
+margin-bottom: 50px;
+margin-top: 50px;
+}
+h3{
+    font-size:2rem;
 }
 .container-search{
 border:1px solid grey;
@@ -21,38 +26,44 @@ display: flex;
 justify-content:center;
 padding-top: 12px;
 padding-bottom: 12px;
-background-color:#ffffff6c;;
+background-color:#e9d9d96c;
 margin: 25px;
 
 }
 .search{
-padding: 5px 150px;
-
+    padding: 20px 180px;
+    font-size: 2rem;
 }
     
 .button-search{
-    padding: 3px 30px;
-    background-color: rgb(0, 174, 255);
-    color: white;
+    padding: 20px 50px;
+    background-color:rgb(221, 221, 15);
+     font-size: 2rem;
+    border-radius: 12%;
 }
 footer{
+    padding: 40px;;
     text-align: center;
-    color:rgb(0, 174, 255);
-background-color:#16d6766c;;
+    background-color:#e9d9d96c;
+    font-size: 2rem;
 
 }
 img{
-width:200px;
-height:180px;
+width:50px;
+height:50px;
 
 }
 
 .card{
-    border: #16d6766c solid 1px;
+    border:grey solid 1px;
+    background-color:white;
     padding:10px;
     margin: 10px;
     border-radius: 10px;
     text-align: center;
+    font-size: 25px;
+    width: 250px;
+    height:300px ;
 }
 .button-card{
     padding: 2px 10px;
@@ -95,4 +106,12 @@ margin: 200px;
   list-style-type: none;
   padding: 0;
   margin: 0; 
+}
+
+.button-addcard {
+
+}
+.add{
+    opacity:0.6%;
+    color: red;
 }
