--- a/styles.css
+++ b/styles.css
@@ -4,104 +4,108 @@
     box-sizing:border-box;
     font-family: poppins, sans-serif;
     list-style: none;
-    color:rgb(75, 62, 62);
+    
 } 
 body{
 
-    background-color:whitesmoke;
+    background-color:rgb(15, 3, 3);
 }
 h1{
 font-size: 7rem;
-
+color:rgb(235, 126, 144);
 text-align: center;
 margin-bottom: 50px;
 margin-top: 50px;
 }
 h3{
     font-size:2rem;
+    color:rgb(235, 126, 144);
 }
 .container-search{
-border:1px solid grey;
 display: flex;
 justify-content:center;
 padding-top: 12px;
 padding-bottom: 12px;
-background-color:#e9d9d96c;
 margin: 25px;
 
 }
 .search{
     padding: 20px 180px;
     font-size: 2rem;
+    color:rgb(235, 126, 144) ;
 }
     
 .button-search{
     padding: 20px 50px;
-    background-color:rgb(221, 221, 15);
+    background-color:pink;
      font-size: 2rem;
     border-radius: 12%;
+    color: #000;
 }
 footer{
+    margin-top: 50PX;
     padding: 40px;;
     text-align: center;
-    background-color:#e9d9d96c;
+    background-color:rgb(235, 126, 144) ;
     font-size: 2rem;
+    color: white;
 
 }
 img{
-width:50px;
-height:50px;
+width:70px;
+height:90px;
+margin-top: 10px;
+margin-bottom: 20px;
 
 }
 
 .card{
-    border:grey solid 1px;
+    border:rgb(224, 62, 183) solid 3px;
+    color:rgb(235, 126, 144);
     background-color:white;
     padding:10px;
     margin: 10px;
     border-radius: 10px;
     text-align: center;
     align-items: center;
-    font-size: 25px;
-    width: 250px;
-    height:330px ;
+    font-size: 20px;
+    width: 270px;
+    height:350px ;
 }
 .button-card{
-    padding: 2px 10px;
-    background-color: rgb(0, 174, 255);
+    margin-top: 10px;
+    padding: 4px 15px;
+    background-color: black;
     color: white;
 }
 
 .container{
   display: flex;
-  flex-direction: row; /* Coloca los hijos en fila (horizontalmente) */
-  /* Opcional:
-  justify-content: space-around; /* Distribuye el espacio entre las secciones */
-  align-items: flex-start; /* Alinea las secciones en la parte superior */
-
+  flex-direction: row; 
+  align-items: flex-start; 
 }
 
 .container-items1{
-      display: flex; /* Convierte el div en un contenedor flex */
-  flex-direction: column; /* Asegura que los elementos hijos se dispongan en fila (horizontalmente) */
-  /* Opcional:
-  justify-content: space-around; /* Distribuye el espacio alrededor de las listas */
-  /* align-items: flex-start; /* Alinea las listas en la parte superior (por defecto) */
- margin-left: 20px;
- flex-wrap:wrap ;
+  display: flex; 
+  flex-direction: column; 
+  padding-right: 100px;
+  margin-left: 30px;
+  flex-wrap:wrap ;
 
 }
+
 .container-items2{
 display: flex;
 flex-direction: row;
 flex-wrap: wrap;
-margin: 20px;
+margin-left: 80px;
  align-items: flex-start;
+
 
 
 }
 .ul-2{
-    display: flex;
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
@@ -114,5 +118,18 @@ margin: 20px;
 
 .add{
     opacity:0.8;
-    color: red;
+    background-color: rgb(233, 85, 189);
+    font-family: fantasy;
+    color: #000;
+    
+}
+.button-empty{
+  background-color: rgb(233, 85, 189);
+  color: white;
+  padding: 10px 20px;
+  margin-top: 16px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
 }
