--- a/styles.css
+++ b/styles.css
@@ -8,18 +8,20 @@
 } 
 body{
 
-    background-color:rgb(15, 3, 3);
+    background-image:url(img/fondo-abstracto-pop-borrosa-rosa.jpg) ;
 }
 h1{
+font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 font-size: 7rem;
-color:rgb(235, 126, 144);
+color:rgb(146, 16, 107);
 text-align: center;
 margin-bottom: 50px;
 margin-top: 50px;
 }
 h3{
-    font-size:2rem;
-    color:rgb(235, 126, 144);
+    
+    font-size: 3rem;
+    color:rgb(146, 16, 107);
 }
 .container-search{
 display: flex;
@@ -32,12 +34,12 @@ margin: 25px;
 .search{
     padding: 20px 180px;
     font-size: 2rem;
-    color:rgb(235, 126, 144) ;
+    color:rgb(233, 85, 189) ;
 }
     
 .button-search{
     padding: 20px 50px;
-    background-color:pink;
+    background-color:rgb(233, 85, 189);
      font-size: 2rem;
     border-radius: 12%;
     color: #000;
@@ -46,37 +48,41 @@ footer{
     margin-top: 50PX;
     padding: 40px;;
     text-align: center;
-    background-color:rgb(235, 126, 144) ;
+    background-color: rgb(233, 85, 189);
     font-size: 2rem;
     color: white;
 
 }
 img{
-width:70px;
-height:90px;
+width:250px;
+height:200px;
 margin-top: 10px;
 margin-bottom: 20px;
 
 }
 
 .card{
-    border:rgb(224, 62, 183) solid 3px;
-    color:rgb(235, 126, 144);
-    background-color:white;
+    border:rgb(165, 61, 156) solid 5px;
+    color:black;
+    background-color:rgb(221, 34, 165);
     padding:10px;
     margin: 10px;
     border-radius: 10px;
     text-align: center;
     align-items: center;
     font-size: 20px;
-    width: 270px;
-    height:350px ;
+    width: 380px;
+    height:450px ;
 }
 .button-card{
-    margin-top: 10px;
-    padding: 4px 15px;
-    background-color: black;
-    color: white;
+    text-align: center;
+    margin-top:15px;
+    padding: 15px 80px;
+    background-color: whitesmoke;
+    color:rgb(172, 17, 192);
+    font-size: 30px;
+    border-radius: 20%;
+   font-weight: bolder;
 }
 
 .container{
@@ -118,18 +124,19 @@ margin-left: 80px;
 
 .add{
     opacity:0.8;
-    background-color: rgb(233, 85, 189);
+    background-color: whitesmoke;
     font-family: fantasy;
     color: #000;
     
 }
 .button-empty{
+  
   background-color: rgb(233, 85, 189);
-  color: white;
-  padding: 10px 20px;
+  color:black;
+  padding: 20px 25px;
   margin-top: 16px;
-  border: none;
+  border: black solid 2px;
   border-radius: 8px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 20px;
 }
